--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 
 body{
-    background-image: url(/Images/Untitled\ design.png);
+    background-image: url(Untitled\ design.png);
     background-size: 100% 100%;
     width: 100vw;
     height: 100vh;
